--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 10vh;
+  height: 6vh;
   padding: 1rem;
   background-color: #F5F5F5;
   /* background-color: #F5F; */
@@ -211,6 +211,7 @@ button {
 
 @media screen and (max-width: 600px) {
   .category-container {
+    height: 10vh;
     padding: 16px;
     background-color: #F5F5F5;    
   }
@@ -233,7 +234,9 @@ button {
 .videos {
   display: flex;
   flex-direction: row;
+  height: 80vh;
   overflow-x: scroll;
+  background-color: #F5F5F5;
   /* background-color: #F00; */
 }
 
@@ -261,13 +264,15 @@ button {
 }
 
 .videos-sub-div {
-  /* height: 40vh; */
+  display:flex;
+  flex-direction: column;
   width: 100%;
-  overflow-y: hidden;
   border-right: 1px solid #CCC;
-
-  
   /* background-color: #fcfc; */
+}
+
+.video-sub-y-scroll-div {
+  overflow-y: scroll;
 }
 
 .video-section {
@@ -276,10 +281,11 @@ button {
   grid-template-rows: repeat(auto-fill, 16rem);
   gap: 18px .4rem;
   padding: 0 .5rem;
+  margin-bottom: 10px;
   /* border: 1px solid #CCC; */
   /* height: 40vh; */
   width: 100%;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   background-color: #F5F5F5;
   /* background-color: #F5F; */
 }
